--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,8 @@ hs_err_pid*
 # Intellij IDEA config files
 .idea
 
+# Test file
+test/
+
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
